--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
 #game div {
-  border: 1px solid black;
+  border: 8px solid #31c6d4;
   width: 15%;
   height: 200px;
   margin: 10px;
   display: inline-block;
+}
+
+body {
+  color: #ff1e1e;
+  background-color: #ffff00;
+}
+
+h1 {
+  text-align: center;
+  border: solid 1px rgb(0, 0, 0);
+  background: linear-gradient(34deg, #31c6d4, #00ffd1);
 }
